--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Eric Zanchi",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.17.1",
     "express": "^4.16.2",
     "express-graphql": "^0.6.11",
     "graphql": "^0.12.3"
