--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     "express": "^4.16.2",
     "express-graphql": "^0.6.11",
     "graphql": "^0.12.3"
+  },
+  "devDependencies": {
+    "eslint": "^4.16.0",
+    "eslint-config-gsandf": "^1.0.0"
   }
 }
