--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.2",
     "express-graphql": "^0.6.11",
     "graphql": "^0.12.3",
+    "hashmap": "^2.3.0",
     "nodemon": "^1.14.11"
   },
   "devDependencies": {
