--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "dependencies": {
     "express": "^4.16.2",
     "express-graphql": "^0.6.11",
-    "graphql": "^0.12.3",
-    "nodemon": "^1.14.11"
+    "graphql": "^0.12.3"
   },
   "devDependencies": {
     "eslint": "^4.16.0",
-    "eslint-config-gsandf": "^1.0.0"
+    "eslint-config-gsandf": "^1.0.0",
+    "nodemon": "^1.14.11"
   }
 }
